Add PriceService, PriceServiceImpl and h2 config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=prueba Inditex
+
+spring:
+    datasource:
+        url: jdbc:h2:mem:mydbTest
+        username: test
+        password: password
+        driverClassName: org.h2.Driver
+    jpa:
+        database-platform: org.hibernate.dialect.H2Dialect
