--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.application.name=prueba Inditex
-
 spring:
+    application:
+        name: prueba Inditex
     datasource:
         url: jdbc:h2:mem:mydbTest
         username: test
